dnl This is the tinker/bsp configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
#AC_INIT(tk_stubs.c)
AC_INIT(bsp, [0.1.0])
AC_MSG_NOTICE([<<< Running configure for $PACKAGE_NAME version $PACKAGE_VERSION >>>])

AC_CONFIG_AUX_DIR(..)
dnl The following is sadly not working properly. Use autoconf -I <dir> instead to get the aclocal.m4
#AC_CONFIG_MACRO_DIR(../)

dnl Need to expand before sources are set to get some variable(s) set.
dnl TODO
dnl It would be better if TINKER_CONFIGURE didn't depend on sources and that
dnl Makefile (and others) generation get a macro of their own.
TINKER_CONFIGURE(..)

sources_c="gnu_stubs.c tk_stubs.c"

dnl Note that $HOSTED may not be fully deducted. Therefore compered like
dnl this of `$HOSTED -eq 1'
if test "X$HOSTED" == "X1"; then
   #No root-stack needed. Process stack is used as root-stack.
   sources_c="$sources_c"
else
   sources_c="$sources_c stack.c"
fi

dnl NOTE that if any sources gets added *after* TINKER_CONFIGURE is
dnl expanded, the below is  mandatory
ALL_C=$sources_c
AC_SUBST(ALL_C)

case "${host}" in
  arm-*-*)
    AC_MSG_NOTICE([<<< BSP for ARM >>>])
    AC_CONFIG_SUBDIRS([gnu_arm])
    ;;
  armv7l-*-*)
    AC_MSG_NOTICE([<<< BSP for ARM >>>])
    AC_CONFIG_SUBDIRS([gnu_armv7l])
    ;;
  powerpc-*-*)
    AC_MSG_NOTICE([<<< BSP for PowerPC >>>])
    AC_CONFIG_SUBDIRS([gnu_powerpc])
    ;;
  bfin-*-*)
    AC_MSG_NOTICE([<<< BSP for Blackfin >>>])
    AC_CONFIG_SUBDIRS([gnu_bfin])
    ;;
  i[[3456789]]86-*-*)
    AC_MSG_NOTICE([<<< BSP for X86 >>>])
    AC_CONFIG_SUBDIRS([gnu_i386])
    ;;
  x86_64-*-*)
    AC_MSG_NOTICE([<<< BSP for x86_64 >>>])
    AC_CONFIG_SUBDIRS([gnu_x86_64])
    ;;
  *)
	AC_MSG_ERROR([\$host: $host unknown. Can't configure BSP.
		Please add cofiguration. See ./bsp/configure.in])
    ;;
esac

if test $_TK_COMP_FILESYS == __tk_yes; then
    AC_MSG_NOTICE([<<< FS drivers >>>])
    AC_CONFIG_SUBDIRS([drivers])
fi

AC_OUTPUT(Makefile-gnu)
