dnl This is the tinker/bsp/gnu_arm configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
#AC_INIT(startup_gnu.s)
AC_INIT(gnu_arm, [0.1.0])
AC_MSG_NOTICE([<<< Running configure for $PACKAGE_NAME version $PACKAGE_VERSION >>>])

AC_CONFIG_AUX_DIR(../..)

dnl The following is sadly not working properly. Use autoconf -I <dir> instead to get the aclocal.m4
#AC_CONFIG_MACRO_DIR(../..)

AC_CONFIG_SUBDIRS([lpc21xx])

sources_c="tk_angel.c tk_systimer.c"
TINKER_CONFIGURE(../..)

AC_OUTPUT(Makefile-gnu)
