dnl This is the tinker/bsp/gnu_powerpc configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ([2.59])
#AC_INIT(startup_gnu.s)
AC_INIT(gnu_powerpc, [0.1.0])
AC_MSG_NOTICE([<<< Running configure for $PACKAGE_NAME version $PACKAGE_VERSION >>>])

AC_CONFIG_AUX_DIR(../..)

dnl The following is sadly not working properly. Use autoconf -I <dir> instead to get the aclocal.m4
#AC_CONFIG_MACRO_DIR(../..)

#AC_CONFIG_SUBDIRS([lpc21xx])

sources_c="hixsys.c"
#sources_asm="startup_gnu.s"
sources_asm=""
#extras="../../lib/ram_gnu.ld ../../lib/flash_gnu.ld ../../lib/crt0.o"

TINKER_CONFIGURE(../..)
subdirs=
AC_SUBST(subdirs)


if test $SYSTEM == 'default'; then
   AC_DEFINE([TK_SYSTEM],__SYS_DEFAULT__)
elif test $SYSTEM == 'hixs'; then
   AC_DEFINE([TK_SYSTEM],__SYS_HIXS__)
else
   AC_MSG_ERROR([<<< Tinker does not support the system you'we chosen])
fi

dnl Update config.h
AC_CONFIG_HEADER(../../include/config.h)

AC_OUTPUT(Makefile-gnu)
